--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,15 @@
     max-width: 100%;
     display: inline-block;
   }
+
+  .navigation__list.open {
+    transition: 0.4s ease-in;
+    top: 0;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
