--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,16 @@
 
     display: flex;
     flex-direction: column;
+    gap: 4rem;
     align-items: center;
     justify-content: center;
+  }
+
+  @media (max-width: 350px) {
+    .navigation_form {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
   }
 }
